# r_portal_bidir

./: .gitignore  CMakeLists.txt  README.md  experiment_compare_portal_is_output.py  experiment_generate_colorbar.py  experiment_rendering_output.py  imgui.ini  lmenv.py  lmexperiment.py  lmscene.py  paper.bib  portal.h  portal_bidir.lyx  render_ref.py  renderer_portal_bdpt.cpp  test_portal_bidir.py  test_portal_bidir_fixed.py  test_portal_bidir_fixed_test.py  test_portal_bidir_inter1.py  test_visual_debugging.py  test_visual_debugging2.py  vis.py
images/: fig_path_construction_intermediate.pdf_tex  fig_portal_bdpts.pdf_tex
scene/: plane2.blend  plane2.mtl
scene/custom/: cornell_double.mtl  doublebox_fixed3.mtl
scene/plane2/: plane2.blend
scene/portal_box/: portal_box.blend
scene/portal_cube/: portal_cube.blend
scene/portal_cube2/: portal_cube.blend  portal_cube.mtl
